feat(api): Add perfume endpoints
